syntax = "proto3";

package identity;
option java_package = "dev.psyconnect.grpc.api_gateway";
service TokenService {
  rpc TokenCheckValid(TokenRequest) returns (TokenResponse);
}
message TokenRequest {
  string token = 1;
}
message TokenResponse {
  bool valid = 1;
}